# search-rs

./: .gitignore  Cargo.toml  Makefile  gl4-dataset.json  gl4-datasettest.json  gl4-datasettest2.json  index.html  readme.md
src/: lib.rs  main.rs  readme.md
