[package]
name = "search-rs"
version = "0.1.0"
edition = "2021"
authors = ["Khuong Duy <khuongduy354@gmail.com>"]
description = "A Rust search engine"
license = "MIT/Apache-2.0"
repository = "https://github.com/khuongduy354/search-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
xml-rs="0.8.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen="0.2"
